[package]
name = "metacontrols-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["json"]
json = ["serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"] }
#egui = "0.27.2"

# NOTE: Enabled egui features must be the same between server and client!!
egui = { path = "../../egui/crates/egui", features = ["serde", "accesskit", "default_fonts", "persistence"] }
bincode = { version = "1.3.3", optional = true }
serde_json = { version = "1", optional = true }
