[package]
name = "meterm-common"
version = "0.1.0"
edition = "2021"

[features]
default = []
json = ["serde_json"]

[dependencies]
serde = { version = "1", features = ["derive"] }
#egui = "0.27.2"

# NOTE: Enabled egui features must be the same between server and client!!
#egui = { path = "../../egui/crates/egui", features = [
egui = { git = "https://github.com/Masterchef365/egui.git", branch = "meterm2", features = [
 "accesskit",
 "log",
 "ron",
 "serde",
] }
bincode = "1.3.3"
serde_json = { version = "1", optional = true }
lz4_flex = "0.11.3"
anyhow = "1"
